Feature User Add Card & Verify Phone Number
